--- a/cliant/frontendpro/src/Qustion/QuestionDetail.css
+++ b/cliant/frontendpro/src/Qustion/QuestionDetail.css
@@ -36,4 +36,20 @@
   a:hover {
     color: #1d4ed8;
   }
+  .question-header {
+    background: #f8f8f8;
+    border-left: 5px solid #007acc;
+    padding: 1rem;
+    margin-bottom: 1rem;
+  }
   
+  .question-header h2 {
+    margin: 0 0 0.5rem;
+    font-size: 1.5rem;
+    color: #333;
+  }
+  
+  .question-header p {
+    margin: 0;
+    color: #666;
+  }
